Update VSCode setting

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,5 +6,8 @@
   "python.pythonPath": "python3",
   "workbench.startupEditor": "newUntitledFile",
   "explorer.confirmDelete": false,
-  "window.zoomLevel": 0
+  "window.zoomLevel": 0,
+  "prettier.semi": false,
+  "prettier.singleQuote": true,
+  "javascript.updateImportsOnFileMove.enabled": "always"
 }
