--- a/config/nvim/deinlazy.toml
+++ b/config/nvim/deinlazy.toml
@@ -115,84 +115,19 @@ repo = 'hail2u/vim-css3-syntax'
 on_ft = ['css']
 
 [[plugins]]
-repo = 'mattn/emmet-vim'
-on_ft = ['html', 'php', 'css', 'scss']
-
-[[plugins]]
-repo = 'slim-template/vim-slim'
-on_ft = ['slim']
-
-[[plugins]]
-repo = 'othree/yajs.vim'
+repo = 'pangloss/vim-javascript'
 on_ft = ['javascript', 'javascript.jsx']
-
-[[plugins]]
-repo = 'billyvg/tigris.nvim'
-on_ft = ['javascript', 'javascript.jsx']
-hook_post_update = '''
-  let g:dein#plugin.build = './install.sh'
-'''
 
 [[plugins]]
 repo = 'mxw/vim-jsx'
-on_ft = ['jsx', 'javascript.jsx']
-
-[[plugins]]
-repo = 'trotzig/import-js'
 on_ft = ['javascript', 'javascript.jsx']
-
-[[plugins]]
-repo = 'marijnh/tern_for_vim'
-on_ft = ['javascript', 'javascript.jsx']
-build = 'npm install -g tern'
-
-[[plugin]]
-repo = 'carlitux/deoplete-ternjs'
-depends = ['deoplete.nvim']
-on_ft = ['javascript','javascript.jsx']
-on_i = 1
-hook_source = '''
-  let g:tern#command = ["tern"]
-  let g:tern#arguments = ["--persistent"]
-'''
-
-[[plugins]]
-repo = 'othree/javascript-libraries-syntax.vim'
-on_ft = ['javascript', 'javascript.jsx']
-hook_source = '''
-  let g:used_javascript_libs = 'jquery,react'
-  let b:javascript_lib_use_jquery = 1
-  let b:javascript_lib_use_react = 1
-'''
-
-[[plugins]]
-repo = 'letientai299/vim-react-snippets'
-on_ft = ['javascript', 'javascript.jsx']
-
-[[plugins]]
-repo = 'prettier/vim-prettier'
-build = '''
-  yarn install
-'''
-hook_source = '''
-  let g:prettier#autoformat = 0
-'''
-on_ft = ['javascript', 'javascript.jsx', 'typescript', 'typescript.tsx']
 
 [[plugins]]
 repo = 'styled-components/vim-styled-components'
 on_ft = ['javascript', 'javascript.jsx', 'typescript', 'typescript.tsx']
 
 [[plugins]]
-repo = 'posva/vim-vue'
-on_ft = ['vue']
-
-[[plugins]]
 repo = 'leafgarland/typescript-vim'
-on_ft = ['typescript', 'typescript.tsx']
-
-[[plugins]]
-repo = 'mhartington/nvim-typescript'
 on_ft = ['typescript', 'typescript.tsx']
 
 [[plugins]]
@@ -270,10 +205,6 @@ repo = 'vim-perl/vim-perl'
 on_ft = ['pl']
 
 [[plugins]]
-repo = 'udalov/kotlin-vim'
-on_ft = ['kotlin']
-
-[[plugins]]
 repo = 'zchee/deoplete-jedi'
 depends = ['deoplete.nvim']
 on_ft = ['python']
@@ -284,10 +215,6 @@ repo = 'zchee/deoplete-zsh'
 depends = ['deoplete.nvim']
 on_ft = ['zsh']
 in_i = 1
-
-[[plugins]]
-repo = 'hashivim/vim-vagrant'
-on_ft = ['Vagrantfile']
 
 [[plugins]]
 repo = 'hashivim/vim-terraform'
