Update setting of VS code

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -12,6 +12,9 @@
   "window.zoomLevel": 0,
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "cSpell.language": "en",
+  "shellcheck.enable": true,
+  "shellcheck.run": "onSave",
+  "shellcheck.executablePath": "shellcheck",
   "python.pythonPath": "python3",
   "prettier.eslintIntegration": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
