--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -57,5 +57,6 @@
     "goToImplementation": true,
     "documentSymbols": true,
     "workspaceSymbols": true
-  }
+  },
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
