--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -11,6 +11,7 @@
   "workbench.useExperimentalGridLayout": true,
   "window.zoomLevel": 0,
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "vsicons.dontShowNewVersionMessage": true,
   "cSpell.language": "en",
   "shellcheck.enable": true,
   "shellcheck.run": "onSave",
@@ -22,6 +23,9 @@
   "solargraph.externalServer": {
     "host": "localhost",
     "port": 7658
+  },
+  "[dockerfile]": {
+    "editor.defaultFormatter": "ms-azuretools.vscode-docker"
   },
   "[go]": {
     "editor.formatOnSave": true,
@@ -58,6 +62,5 @@
     "documentSymbols": true,
     "workspaceSymbols": true
   },
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "vsicons.dontShowNewVersionMessage": true
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
