--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,7 +3,9 @@
   "editor.renderLineHighlight": "all",
   "editor.cursorBlinking": "expand",
   "editor.wordWrap": "on",
-  "editor.suggestSelection": "first",
+  "editor.scrollBeyondLastLine": false,
+  "editor.renderIndentGuides": true,
+  "editor.minimap.enabled": true,
   "breadcrumbs.enabled": true,
   "explorer.confirmDelete": false,
   "workbench.startupEditor": "newUntitledFile",
