--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -64,5 +64,6 @@
     "documentSymbols": true,
     "workspaceSymbols": true
   },
-  "typescript.updateImportsOnFileMove.enabled": "always"
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "editor.suggestSelection": "first"
 }
