--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,10 +1,14 @@
 {
   "editor.formatOnSave": true,
+  "eslint.autoFixOnSave": true,
   "editor.renderLineHighlight": "all",
   "editor.cursorBlinking": "expand",
   "editor.wordWrap": "on",
   "editor.scrollBeyondLastLine": false,
   "editor.renderIndentGuides": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.tslint": true
+  },
   "editor.minimap.enabled": true,
   "breadcrumbs.enabled": true,
   "explorer.confirmDelete": false,
@@ -65,5 +69,6 @@
     "workspaceSymbols": true
   },
   "typescript.updateImportsOnFileMove.enabled": "always",
-  "editor.suggestSelection": "first"
+  "editor.suggestSelection": "first",
+  "todo-tree.highlights.enabled": true
 }
