--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -59,5 +59,6 @@
     "viewType": "jupyter.notebook.ipynb",
     "filenamePattern": "*.ipynb"
   }
-]
+],
+"workbench.editor.untitled.hint": "hidden"
 }
