--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -54,11 +54,8 @@
 "python.jediEnabled": false,
 "python.languageServer": "Microsoft",
 "go.toolsManagement.autoUpdate": true,
-"workbench.editorAssociations": [
-  {
-    "viewType": "jupyter.notebook.ipynb",
-    "filenamePattern": "*.ipynb"
-  }
-],
+"workbench.editorAssociations": {
+  "*.ipynb": "jupyter.notebook.ipynb"
+},
 "workbench.editor.untitled.hint": "hidden"
 }
