--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -57,5 +57,6 @@
 "workbench.editorAssociations": {
   "*.ipynb": "jupyter.notebook.ipynb"
 },
-"workbench.editor.untitled.hint": "hidden"
+"workbench.editor.untitled.hint": "hidden",
+"GitLive.Issue tracker integration": "Disabled"
 }
