--- a/config/nvim/dein.toml
+++ b/config/nvim/dein.toml
@@ -212,17 +212,20 @@ hook_add = '''
 repo = 'godlygeek/tabular'
 
 [[plugins]]
-repo = '/usr/local/opt/fzf'
+repo = 'junegunn/fzf'
+do = '''
+  fzf#install()
+'''
+
 
 [[plugins]]
 repo = 'junegunn/fzf.vim'
+depends = ['junegunn/fzf']
 hook_add = '''
   command! -bang -nargs=* Rg
     \ call fzf#vim#grep(
-    \   'rg --column --line-number --no-heading --color=always '.shellescape(<q-args>), 1,
-    \   <bang>0 ? fzf#vim#with_preview('up:60%')
-    \           : fzf#vim#with_preview('right:50%:hidden', '?'),
-    \   <bang>0)
+    \   'rg --line-number --no-heading '.shellescape(<q-args>), 0,
+    \   fzf#vim#with_preview({'options': '--exact --reverse'}, 'right:50%:wrap'))
 '''
 
 # For vim-lsp
