--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "config/nvim/dein.vim"]
 	path = config/nvim/dein.vim
-	url = https://github.com/Shougo/dein.vim.git
+	url = git@github.com:Shougo/dein.vim.git
