--- a/config/starship.toml
+++ b/config/starship.toml
@@ -12,6 +12,7 @@ $git_commit\
 $git_state\
 $git_metrics\
 $git_status\
+$python\
 $aws\
 $gcloud\
 $kubernetes\
@@ -42,6 +43,9 @@ disabled = false
 format = '/ [\[$time\]]($style) '
 style = "yellow"
 time_format = '%T'
+
+[python]
+format = '/ [${symbol}${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
 
 [aws]
 format = '/ [$symbol ($profile) (\($region\) )]($style) '
