--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "editor.fontFamily": "Monaspace Neon",
+  "editor.fontLigatures": true,
   "eslint.autoFixOnSave": true,
   "editor.renderLineHighlight": "all",
   "editor.cursorBlinking": "expand",
