--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -45,3 +45,13 @@ skip-levels = 1
 
 [editor.file-picker]
 hidden = false
+
+[keys.normal.space.","]
+b = ":sh helix-wezterm.sh blame"
+c = ":sh helix-wezterm.sh check"
+e = ":sh helix-wezterm.sh explorer"
+f = ":sh helix-wezterm.sh fzf"
+g = ":sh helix-wezterm.sh lazygit"
+o = ":sh helix-wezterm.sh open"
+r = ":sh helix-wezterm.sh run"
+t = ":sh helix-wezterm.sh test"
