--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -90,5 +90,6 @@
   "[yaml]": {
     "editor.defaultFormatter": "redhat.vscode-yaml"
   },
-  "editor.inlineSuggest.suppressSuggestions": true
+  "editor.inlineSuggest.suppressSuggestions": true,
+  "explorer.confirmDragAndDrop": false
 }
